actix-web-codegen/tests/trybuild/route-custom-lowercase.stderr
error: HTTP method must be uppercase: `hello`
 --> tests/trybuild/route-custom-lowercase.rs:5:23
  |
5 | #[route("/", method = "hello")]
  |                       ^^^^^^^

error[E0277]: the trait bound `fn() -> impl std::future::Future<Output = String> {index}: HttpServiceFactory` is not satisfied
  --> tests/trybuild/route-custom-lowercase.rs:14:55
   |
14 |     let srv = actix_test::start(|| App::new().service(index));
   |                                               ------- ^^^^^ the trait `HttpServiceFactory` is not implemented for `fn() -> impl std::future::Future<Output = String> {index}`
   |                                               |
   |                                               required by a bound introduced by this call
   |
note: required by a bound in `App::<T>::service`
  --> $WORKSPACE/actix-web/src/app.rs
   |
   |         F: HttpServiceFactory + 'static,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `App::<T>::service`
